# meeting_notes_parser

./: .gitignore  SKILL.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
examples/: advanced_usage.py  basic_usage.py  sample_notes.txt
src/: __init__.py  cli.py  init.py  parser.py  parser.py - Core implementation
tests/: test_parser.py
