[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "meeting-notes-parser"
version = "1.0.0"
description = "Extract action items, decisions, and key points from unstructured meeting notes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["meeting", "notes", "parser", "action-items", "nlp", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
dependencies = [
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
meeting-notes-parser = "meeting_notes_parser.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/meeting-notes-parser"
Repository = "https://github.com/your-username/meeting-notes-parser"
Issues    = "https://github.com/your-username/meeting-notes-parser/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit   = ["tests/*", "examples/*"]
